--- a/src/app/modules/auth/login-register/login-register.page.scss
+++ b/src/app/modules/auth/login-register/login-register.page.scss
@@ -8,3 +8,8 @@ ion-content.bg-right {
 }
 
 
+ion-item{
+  --highlight-color-focused:var(--ion-color-primary);
+  --highlight-color-valid:var(--ion-color-primary);
+  --highlight-color-invalid:var(--ion-color-primary);
+}
