--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -64,7 +64,7 @@
     >
       <ng-template
         swiperSlide
-        *ngFor="let cat of [{},{},{},{},{},{},{},{},{},{},{},{}]"
+        *ngFor="let cat of [{},{},{},{},{},{},{},{}]"
       >
         <img src="./../../../assets/images/512.png" />
       </ng-template>
