--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,13 +1,29 @@
+ion-header{
+  --background: none !important;
+  background: #ffeee3;
 
-ion-toolbar {
-
-  --background: #ffeee3;
+  min-height: 60px;
   position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -30px;
+      background: url("./../../../assets/images/wave00.png");
+      background-size: 100% 100%;
+      width: 100%;
+      height: 100px;
+    }
+}
+ion-toolbar {
+  background: none !important;
+  --background: none !important;
+  // --background: #ffeee3;
+  // position: relative;
  
-  --min-height: 140px !important;
-  --padding-end: 0px !important;
-  --padding-start: 0px !important;
-  --opacity: 1 !important;
+  // --min-height: 140px !important;
+  // --padding-end: 0px !important;
+  // --padding-start: 0px !important;
+  // --opacity: 1 !important;
 
   .toolbar-container {
     padding-inline-start: 0px !important;
@@ -25,14 +41,7 @@ ion-toolbar {
     }
     ion-icon {
       font-size: 40px !important;
-    }
-
-   
+    }  
   }
-  &::after {
-    content: url("./../../../assets/images/wave00.png");
-    position: absolute;
-    bottom: 0;
-    //background-image: url("./../../../assets/images/wave00.png") ;
-  }
+ 
 }
