--- a/src/app/modules/auth/login-register/login-register.page.html
+++ b/src/app/modules/auth/login-register/login-register.page.html
@@ -178,8 +178,10 @@
             type="tel"
             formControlName="phoneNumber"
           ></ion-input>
+       
         </ion-item>
-
+        <!-- <ion-icon name="eye-outline"></ion-icon>
+        <ion-icon name="eye-off-outline"></ion-icon> -->
         <div
           class="error-box"
           *ngIf=" isSignInSubmitted && signinErrorControl.phoneNumber.errors?.required"
@@ -203,9 +205,14 @@
             (ionFocus)="focusPassword(true)"
             (ionBlur)="focusPassword(false)"
             placeholder="{{'password'|translate}}"
-            type="password"
+            [type]="inputType"
             formControlName="password"
           ></ion-input>
+          <ion-icon (click)="showPassword()"
+          item-end
+          color="primary"
+          [name]="iconName"
+        ></ion-icon>
         </ion-item>
 
         <div
