--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -3,6 +3,7 @@
   [isEditable]="false"
   [backwardRoute]="'/tabs/main'"
   [isMain]="false"
+  class="header-height"
 ></app-header>
 <ion-content class="custom-padding">
   <ion-grid >
