--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -1,6 +1,6 @@
-<app-header  [title]="'main'" [isMain]="true"></app-header>
+<app-header  [title]="'main'" [isMain]="true" class="header-height"></app-header>
 
-<ion-content>
+<ion-content >
   <div class="search-section ion-padding-horizontal">
     <div class="search-input">
       <ion-item lines="none" class="search-wrapper">
