--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -3,6 +3,7 @@
   [backwardRoute]="'/tabs/main'"
   [isEditable]="false"
   [isMain]="false"
+  class="header-height"
 ></app-header>
 
 <ion-content class="ion-padding">
