--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -3,6 +3,7 @@
   [isEditable]="false"
   [backwardRoute]="'/tabs/main/reservation'"
   [isMain]="false"
+  class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
   <div class="container">
