--- a/src/app/modules/search-results/search-results.page.html
+++ b/src/app/modules/search-results/search-results.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="'search-results'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false">
+<app-header class="header-height" [title]="'search-results'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false">
 </app-header>
 
 <ion-content class="ion-padding">
