--- a/src/app/modules/my-reservations-details/my-reservations-details.page.html
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.html
@@ -3,6 +3,7 @@
   [isEditable]="false"
   [backwardRoute]="'/tabs/my-reservations'"
   [isMain]="false"
+  class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
   <div class="container">
