--- a/src/app/modules/profile/profile.page.html
+++ b/src/app/modules/profile/profile.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="'profile'" [backwardRoute]="'/tabs/main'" [forwardRoute]="'/tabs/profile/edit-profile'"
+<app-header class="header-height" [title]="'profile'" [backwardRoute]="'/tabs/main'" [forwardRoute]="'/tabs/profile/edit-profile'"
   [isEditable]="true" [isMain]="false"></app-header>
 
 <ion-content class="ion-padding">
