--- a/src/global.scss
+++ b/src/global.scss
@@ -44,6 +44,17 @@
 // ion-card{
 //   box-shadow: none;
 // }
+
+:root {
+  /* Set the background of the entire app */
+  --ion-background-color: var(--ion-color-white);
+
+  /* Set the font family of the entire app */
+  --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
+}
+.header-height {
+  height: 100px;
+}
 :root[dir="rtl"] {
   ion-menu::part(container) {
     border-radius: 80px 0px 0px 0px;
@@ -223,10 +234,10 @@ ion-tab-bar {
   float: left;
 }
 
-.alert-head.sc-ion-alert-md{
+.alert-head.sc-ion-alert-md {
   padding: 0px !important;
 }
 
-.alert-head.sc-ion-alert-ios{
+.alert-head.sc-ion-alert-ios {
   padding: 0px !important;
 }
