--- a/src/app/modules/auth/login-register/login-register.page.scss
+++ b/src/app/modules/auth/login-register/login-register.page.scss
@@ -13,3 +13,8 @@ ion-item{
   --highlight-color-valid:var(--ion-color-primary);
   --highlight-color-invalid:var(--ion-color-primary);
 }
+
+ion-segment{
+  display: flex;
+  justify-content: space-between;
+}
