--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -30,15 +30,15 @@
     </div>
     <div>
       <ion-icon src="./../../../assets/icon/space.svg"></ion-icon>
-      <p class="fn-14 dalel-Regular secondary-color">450 م</p>
+      <p class="fn-14 dalel-Regular secondary-color">{{itemDetails.space}} م</p>
     </div>
     <div>
       <ion-icon src="./../../../assets/icon/bed.svg"></ion-icon>
-      <p class="fn-14 dalel-Regular secondary-color">10 غرف</p>
+      <p class="fn-14 dalel-Regular secondary-color">{{itemDetails.roomsNumber}} غرف</p>
     </div>
     <div>
       <ion-icon src="./../../../assets/icon/icon4.svg"></ion-icon>
-      <p class="fn-14 dalel-Regular secondary-color">4 حمام</p>
+      <p class="fn-14 dalel-Regular secondary-color">{{itemDetails.bathRoomsNUmber}} حمام</p>
     </div>
   </div>
 
