--- a/src/app/modules/tabs/tabs.page.scss
+++ b/src/app/modules/tabs/tabs.page.scss
@@ -7,10 +7,10 @@ ion-label {
 .selected-label {
   color: var(--ion-color-primary);
 }
-ion-tab-bar {
-  display: flex;
-  justify-content: space-between;
-}
+// ion-tab-bar {
+//   display: flex;
+//   justify-content: space-between;
+// }
 ion-tab-button {
   position: relative;
 
