--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2110,6 +2110,15 @@ button.swiper-pagination-bullet {
   backface-visibility: hidden;
   overflow: hidden;
 }
+:root {
+  /* Set the background of the entire app */
+  --ion-background-color: var(--ion-color-white);
+  /* Set the font family of the entire app */
+  --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
+}
+.header-height {
+  height: 100px;
+}
 :root[dir=rtl] ion-menu::part(container) {
   border-radius: 80px 0px 0px 0px;
 }
