--- a/src/app/modules/tabs/tabs.page.scss
+++ b/src/app/modules/tabs/tabs.page.scss
@@ -4,6 +4,19 @@ ion-label {
   color: var(--ion-color-secondary);
 }
 
+@keyframes updown {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  50% {
+    transform: translateY(50%);
+  }
+
+  100% {
+    transform: translateY(50%);
+  }
+}
 .selected-label {
   color: var(--ion-color-primary);
 }
@@ -11,28 +24,34 @@ ion-label {
 //   display: flex;
 //   justify-content: space-between;
 // }
+.selected{
+  ion-icon{
+    animation: updown 2s ease-in ;
+  }
+  
+}
 ion-tab-button {
   position: relative;
-
+ 
   // default case
-  &::before {
-    background-color: transparent;
-    display: block;
-    content: "";
-    margin: 0 auto;
-    width: 20px;
-    height: 2px;
-  }
-  // selected case
-  &.tab-selected::before {
-    width: 15%;
-    height: 18px;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    top: -20%;
-    right: 42%;
-    margin: 0 auto;
-    background-color: var(--ion-color-primary);
-  }
+  // &::before {
+  //   background-color: transparent;
+  //   display: block;
+  //   content: "";
+  //   margin: 0 auto;
+  //   width: 20px;
+  //   height: 2px;
+  // }
+  // // selected case
+  // &.tab-selected::before {
+  //   width: 15%;
+  //   height: 18px;
+  //   content: "";
+  //   border-radius: 50%;
+  //   position: absolute;
+  //   top: -20%;
+  //   right: 42%;
+  //   margin: 0 auto;
+  //   background-color: var(--ion-color-primary);
+  // }
 }
