--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
                     ? { 'margin-right': '10px' }
                     : { 'margin-left': '10px' }
                 "
-                >{{ p.title | translate }}  </ion-label
-              >
+                >{{ p.title | translate }}
+              </ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
