--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -1,6 +1,6 @@
-<app-header  [title]="'main'" [isMain]="true" class="header-height"></app-header>
+<app-header [title]="'main'" [isMain]="true" class="header-height"></app-header>
 
-<ion-content >
+<ion-content [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
   <div class="search-section ion-padding-horizontal">
     <div class="search-input">
       <ion-item lines="none" class="search-wrapper">
@@ -89,8 +89,6 @@
       [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     >
       <ng-template swiperSlide *ngFor="let item of categoryItems">
-     
-
         <app-custom-card
           [itemDetails]="item"
           [forwardRoute]="'/tabs/main/categories/'"
