--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2114,8 +2114,11 @@ button.swiper-pagination-bullet {
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
 }
-.header-height {
+.md-header-height {
   height: 100px;
+}
+.ios-header-height {
+  height: 130px;
 }
 :root[dir=rtl] ion-menu::part(container) {
   border-radius: 80px 0px 0px 0px;
