--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -6,7 +6,7 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
   <ion-segment
     (ionChange)="reservationsTypeChange($event)"
     value="register"
