--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -6,7 +6,7 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
   <ion-card class="ion-no-margin">
     <ion-item
       *ngFor="let item of notifications"
