--- a/src/app/modules/search-results/search-results.page.html
+++ b/src/app/modules/search-results/search-results.page.html
@@ -1,7 +1,7 @@
 <app-header class="header-height" [title]="'search-results'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false">
 </app-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
 
   <div class="search-result" *ngFor="let item of resultItems ">
     <ion-item lines="none"  detail="false" routerLink="/tabs/main/categories/1/{{item.id}}">
