--- a/src/global.scss
+++ b/src/global.scss
@@ -216,7 +216,7 @@ ion-input {
 }
 
 ion-tab-bar {
-  --background: rgba(var(--ion-color-secondary-rgb), 0.2) !important;
+  --background: #FAD9C5 !important; //rgba(var(--ion-color-secondary-rgb), 0.2) !important;
   margin: 16px;
   border-radius: 5px;
 
