--- a/src/app/modules/policy/policy.page.html
+++ b/src/app/modules/policy/policy.page.html
@@ -1,26 +1,17 @@
 <app-header
-  [title]="'policy'"
+  [title]="conditionDataResponse?.data?.title"
   [isEditable]="false"
   [backwardRoute]="'/tabs/main'"
   [isMain]="false"
   class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
-  <ion-card class="ion-padding">
+  <ion-card class="ion-padding" *ngIf="conditionDataResponse?.data?.desc">
     <div class="content">
-      <p class="fn-14 dalel-Regular gray-black-color">
-        هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي
-        القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة
-        التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسومهناك حقيقة مثبتة منذ
-        زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
-        الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
-        استخدام طريقة لوريم إيبسوم هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى
-        المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل
-        توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
-        إيبسومهناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
-        سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في
-        الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم
-      </p>
+      <p
+        class="fn-14 dalel-Regular gray-black-color"
+        [innerHtml]="conditionDataResponse?.data?.desc"
+      ></p>
     </div>
   </ion-card>
 </ion-content>
