--- a/src/app/components/custom-card/custom-card.component.scss
+++ b/src/app/components/custom-card/custom-card.component.scss
@@ -9,6 +9,9 @@ ion-card{
     height: 140px;
     object-fit: cover;
     object-position: initial;
+   
+      border-radius: 5px;
+    
   }
 
   .title {
