--- a/src/global.scss
+++ b/src/global.scss
@@ -50,11 +50,11 @@
 
 
 .md-header-height {
-  height: 100px;
+  margin-top: 100px;
 }
 
 .ios-header-height {
-  height: 130px;
+  margin-top: 130px;
 }
 
 :root[dir="rtl"] {
