--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -6,7 +6,7 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
+<ion-content class="ion-padding" >
   <app-custom-card
     [itemDetails]="cat"
     [forwardRoute]="'/tabs/main/categories/'"
