--- a/src/app/modules/contact-us/contact-us.page.html
+++ b/src/app/modules/contact-us/contact-us.page.html
@@ -5,7 +5,7 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<ion-content class="ion-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
+<ion-content class="ion-padding" >
 
 
   <div class="auth-login-register">
