--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -5,7 +5,7 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<ion-content class="custom-padding" [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
+<ion-content class="custom-padding" >
   <ion-grid >
     <ion-row>
       <ion-col
