--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -5,11 +5,67 @@
     [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     (slideChange)="swiperSlideChanged($event)"
   >
-    <ng-template swiperSlide *ngFor="let i of [{},{},{}]">
+    <ng-template swiperSlide>
       <div class="boarding">
-        <h5 class="boardng-title">{{"test_title"|translate}}</h5>
+        <h5 class="boardng-title">{{introData?.data?.first_title}}</h5>
 
-        <p class="boardng-subtitle">{{"test_subtitle"|translate}}</p>
+        <p class="boardng-subtitle">{{introData?.data?.first_desc}}</p>
+
+        <div
+          class="boarding-buttons"
+          [ngClass]="currentlangauge=='ar' ? '':'custom-row'"
+        >
+          <div>
+            <ion-button
+              [disabled]="slidingNotAvailable"
+              expand="block"
+              class="btn-custom"
+              (click)="nextSlide($event)"
+            >
+              <span>{{"next"|translate}}</span>
+            </ion-button>
+          </div>
+          <div (click)="skipBoarding()">
+            <div class="ion-text-center skip">
+              <span> {{"skip"|translate}} </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template swiperSlide>
+      <div class="boarding">
+        <h5 class="boardng-title">{{introData?.data?.second_title}}</h5>
+
+        <p class="boardng-subtitle">{{introData?.data?.second_desc}}</p>
+
+        <div
+          class="boarding-buttons"
+          [ngClass]="currentlangauge=='ar' ? '':'custom-row'"
+        >
+          <div>
+            <ion-button
+              [disabled]="slidingNotAvailable"
+              expand="block"
+              class="btn-custom"
+              (click)="nextSlide($event)"
+            >
+              <span>{{"next"|translate}}</span>
+            </ion-button>
+          </div>
+          <div (click)="skipBoarding()">
+            <div class="ion-text-center skip">
+              <span> {{"skip"|translate}} </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template swiperSlide>
+      <div class="boarding">
+        <h5 class="boardng-title">{{introData?.data?.third_title}}</h5>
+
+        <p class="boardng-subtitle">{{introData?.data?.third_desc}}</p>
 
         <div
           class="boarding-buttons"
