--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -5,7 +5,7 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<ion-content class="ion-padding"  [ngClass]="platform=='android'?'md-header-height':'ios-header-height'">
+<ion-content class="ion-padding"  >
   <ion-calendar
     [(ngModel)]="dateRange"
     (change)="onChange($event)"
