--- a/src/global.scss
+++ b/src/global.scss
@@ -49,13 +49,13 @@
 }
 
 
-.md-header-height {
-  margin-top: 100px;
-}
+// .md-header-height {
+//   margin-top: 120px !important;
+// }
 
-.ios-header-height {
-  margin-top: 130px;
-}
+// .ios-header-height {
+//   margin-top: 130px !important;
+// }
 
 :root[dir="rtl"] {
   ion-menu::part(container) {
