--- a/src/app/modules/contact-us/contact-us.page.scss
+++ b/src/app/modules/contact-us/contact-us.page.scss
@@ -14,3 +14,9 @@
     margin-top: 10px;
   }
 }
+
+ion-item{
+  --highlight-color-focused:var(--ion-color-primary);
+  --highlight-color-valid:var(--ion-color-primary);
+  --highlight-color-invalid:var(--ion-color-primary);
+}
