--- a/src/global.scss
+++ b/src/global.scss
@@ -42,20 +42,10 @@
 @import "~swiper/css";
 @import "~swiper/css/bundle";
 
-
 :root {
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
 }
-
-
-// .md-header-height {
-//   margin-top: 120px !important;
-// }
-
-// .ios-header-height {
-//   margin-top: 130px !important;
-// }
 
 :root[dir="rtl"] {
   ion-menu::part(container) {
@@ -216,7 +206,7 @@ ion-input {
 }
 
 ion-tab-bar {
-  --background: #FAD9C5 !important; //rgba(var(--ion-color-secondary-rgb), 0.2) !important;
+  --background: #fad9c5 !important; //rgba(var(--ion-color-secondary-rgb), 0.2) !important;
   margin: 16px;
   border-radius: 5px;
 
