--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -26,14 +26,14 @@ ion-input {
     padding-bottom: 0px !important;
   }
 }
-.focused {
-  ion-item::part(native) {
-    --background: var(--ion-color-primary) !important;
-  }
-  ion-input{
-    --color: var(--ion-color-white) !important;
-  }
-}
+// .focused {
+//   ion-item::part(native) {
+//     --background: var(--ion-color-primary) !important;
+//   }
+//   ion-input{
+//     --color: var(--ion-color-white) !important;
+//   }
+// }
 
 
 ion-item::part(native) {
