--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
         </ion-list>
       </ion-content>
 
-      <ion-footer class="ion-padding logout-section ion-no-border">
+      <ion-footer *ngIf="logined" class="ion-padding logout-section ion-no-border">
         <ion-item lines="none" detail="false" (click)="logout()">
           <ion-icon slot="start" src="./../assets/icon/logout.svg"></ion-icon>
           <ion-label>{{ "logout" | translate }}</ion-label>
