--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -4,9 +4,11 @@
     [config]="config"
     [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     (slideChange)="swiperSlideChanged($event)"
+    *ngIf="getIntro"
   >
     <ng-template swiperSlide>
       <div class="boarding">
+        <img [src]="introData?.data?.first_image">
         <h5 class="boardng-title">{{introData?.data?.first_title}}</h5>
 
         <p class="boardng-subtitle">{{introData?.data?.first_desc}}</p>
@@ -34,7 +36,9 @@
       </div>
     </ng-template>
     <ng-template swiperSlide>
+
       <div class="boarding">
+        <img [src]="introData?.data?.second_image">
         <h5 class="boardng-title">{{introData?.data?.second_title}}</h5>
 
         <p class="boardng-subtitle">{{introData?.data?.second_desc}}</p>
@@ -63,6 +67,7 @@
     </ng-template>
     <ng-template swiperSlide>
       <div class="boarding">
+        <img [src]="introData?.data?.third_image">
         <h5 class="boardng-title">{{introData?.data?.third_title}}</h5>
 
         <p class="boardng-subtitle">{{introData?.data?.third_desc}}</p>
@@ -76,9 +81,9 @@
               [disabled]="slidingNotAvailable"
               expand="block"
               class="btn-custom"
-              (click)="nextSlide($event)"
+              (click)="start()"
             >
-              <span>{{"next"|translate}}</span>
+              <span>{{"start"|translate}}</span>
             </ion-button>
           </div>
           <div (click)="skipBoarding()">
