--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
@@ -1,11 +1,11 @@
-ion-content.background {
-  --background: url(./../../../../assets/images/boarding.svg) center
-    center/cover no-repeat;
-}
+// ion-content.background {
+//   --background: url(./../../../../assets/images/boarding.svg) center
+//     center/cover no-repeat;
+// }
 
 :root[dir="rtl"] {
   .swiper-pagination-bullets {
-    top: 23% !important;
+    top: 57% !important;
     right:  32px !important;
     height: fit-content;
     text-align: right;
@@ -14,7 +14,7 @@ ion-content.background {
 
 :root[dir="ltr"] {
   .swiper-pagination-bullets {
-    top: 23% !important;
+    top: 57% !important;
     right:  32px !important;
     height: fit-content;
     text-align: left;
@@ -42,6 +42,11 @@ ion-content.background {
 }
 .boarding {
   padding: 50px 36px 0;
+  img {
+    width: 100%;
+    height: 300px !important;
+    object-fit: contain;
+  }
   .custom-row {
     padding-top: 16px;
   }
