--- a/src/app/modules/profile/profile.page.html
+++ b/src/app/modules/profile/profile.page.html
@@ -4,7 +4,7 @@
 <ion-content class="ion-padding" >
 
 
-  <div class="profile-card-wrapper">
+  <div class="profile-card-wrapper" *ngIf="getData">
 
     <ion-card class="ion-no-margin ion-padding">
 
