--- a/src/app/modules/notifications/notifications.page.scss
+++ b/src/app/modules/notifications/notifications.page.scss
@@ -25,3 +25,9 @@ ion-item::part(native) {
   justify-content: space-around !important;
 }
 
+.no-notifications{
+  margin-top: 40%;
+  text-align: center;
+  color: var(--ion-color-primary);
+}
+
