--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       >{{ title | translate }}</ion-title
     >
     <ion-buttons slot="end">
-      <ion-button *ngIf="isEditable" (click)="navigate(forwardRoute)">
+      <ion-button class="edit-btn" *ngIf="isEditable" (click)="navigate(forwardRoute)">
         <ion-icon
           slot="icon-only"
           src="./../../../assets/icon/edit.svg"
