--- a/src/app/modules/auth/edit-profile/edit-profile.page.html
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.html
@@ -6,7 +6,7 @@
 ></app-header>
 
 <ion-content class="ion-padding">
-  <div class="auth-login-register">
+  <div class="auth-login-register" *ngIf="getData">
     <ion-card class="auth-container">
       <form
         class="auth-form"
