--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -6,34 +6,37 @@
   class="header-height"
 ></app-header>
 <!-- [ngClass]="item.isRead ? 'isRead' : ''" -->
-<ion-content
-  class="ion-padding"
-  
->
-  <ion-card class="ion-no-margin">
-    <ion-item-sliding  *ngFor="let item of notifications" >
-    <ion-item (click)="openOrederDetails(item.order_id)">
-      <ul>
-        <li>
-          <ion-label>
-            <h5 class="fn-14 dalel-Regular">{{item.message}}</h5>
-            <p
-              item-start
-              class="fn-12 dalel-Regular secondary-color"
-              [ngClass]="currentlangauge == 'ar' ? 'float-right' : 'float-left'"
-            >
-              {{item.duration}}
-            </p>
-          </ion-label>
-        </li>
-      </ul>
-    </ion-item>
-    <ion-item-options side="end" (click)="deleteItem(item.id)">
-      <ion-item-option color="danger">
-        <ion-icon slot="icon-only" name="trash"></ion-icon>
-      </ion-item-option>
-     
-    </ion-item-options>
+<ion-content class="ion-padding">
+  <ion-card
+    class="ion-no-margin"
+    *ngIf="getNotifications && notifications.length!=0"
+  >
+    <ion-item-sliding *ngFor="let item of notifications">
+      <ion-item (click)="openOrederDetails(item.order_id)">
+        <ul>
+          <li>
+            <ion-label>
+              <h5 class="fn-14 dalel-Regular">{{item.message}}</h5>
+              <p
+                item-start
+                class="fn-12 dalel-Regular secondary-color"
+                [ngClass]="currentlangauge == 'ar' ? 'float-right' : 'float-left'"
+              >
+                {{item.duration}}
+              </p>
+            </ion-label>
+          </li>
+        </ul>
+      </ion-item>
+      <ion-item-options side="end" (click)="deleteItem(item.id)">
+        <ion-item-option color="danger">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
     </ion-item-sliding>
   </ion-card>
+
+  <div class="no-notifications" *ngIf="noNotifications">
+    <h5>{{'no-notifications'|translate}}</h5>
+  </div>
 </ion-content>
