--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,19 +1,19 @@
-ion-header{
+ion-header {
   --background: none !important;
   background: #ffeee3;
 
   min-height: 60px;
   margin-bottom: 50px;
   position: relative;
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: -30px;
-      background: url("./../../../assets/images/wave00.png");
-      background-size: 100% 100%;
-      width: 100%;
-      height: 100px;
-    }
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -30px;
+    background: url("./../../../assets/images/wave00.png");
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100px;
+  }
 }
 ion-toolbar {
   background: none !important;
@@ -34,9 +34,11 @@ ion-toolbar {
     }
     ion-icon {
       font-size: 40px !important;
-    }  
+    }
   }
- .arrow-btn,.edit-btn{
-  margin-top: 10px;
- }
+  .arrow-edit-btns {
+    ion-button::part(native) {
+      margin-top: 10px;
+    }
+  }
 }
