--- a/src/app/modules/favourites/favourites.page.scss
+++ b/src/app/modules/favourites/favourites.page.scss
@@ -12,13 +12,14 @@ ion-card {
     ion-icon {
       font-size: 16px;
     }
+    &::part(native) {
+      padding-inline-start: 10px !important;
+      padding-inline-end: 10px !important;
+    }
   }
 
-  ion-button::part(native) {
-    padding-inline-start: 10px !important;
-    padding-inline-end: 10px !important;
-  }
-  position: relative;
+
+  //position: relative;
 
   .price-container {
     position: absolute;
