--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -12,4 +12,11 @@
     [forwardRoute]="'/tabs/main/categories/'"
     *ngFor="let cat of categoriesList"
   ></app-custom-card>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
