--- a/src/app/modules/auth/code/code.page.html
+++ b/src/app/modules/auth/code/code.page.html
@@ -3,7 +3,12 @@
     <div class="logo">
       <img src="../../../../assets/images/logo.svg" />
     </div>
-
+    <!-- <ion-card>
+      <ng-otp-input
+        (onInputChange)="onOtpChange($event)"
+        [config]="config"
+      ></ng-otp-input>
+    </ion-card> -->
     <ion-card class="auth-container">
       <div class="auth-container-title">
         <h5>{{"code-verification"|translate}}</h5>
@@ -15,8 +20,11 @@
 
       <form class="auth-form" (ngSubmit)="confirmVerificationCode()">
         <ion-row>
-          <ion-col size="3" [ngClass]="inputFocusNumber1 ? 'focused' : 'unfocused' ">
-            <ion-item lines="none" >
+          <ion-col
+            size="3"
+            [ngClass]="inputFocusNumber1 ? 'focused' : 'unfocused' "
+          >
+            <ion-item lines="none">
               <ion-input
                 class="otp"
                 #n1
@@ -26,12 +34,15 @@
                 (keyup)="next($event,n2)"
                 (ionFocus)="focusNumber1(true)"
                 (ionBlur)="focusNumber1(false)"
-                type="number"
+                type="tel"
               ></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="3">
-            <ion-item lines="none" [ngClass]="inputFocusNumber2 ? 'focused' : 'unfocused' ">
+            <ion-item
+              lines="none"
+              [ngClass]="inputFocusNumber2 ? 'focused' : 'unfocused' "
+            >
               <ion-input
                 class="otp"
                 #n2
@@ -41,12 +52,15 @@
                 (keyup)="next($event,n3)"
                 (ionFocus)="focusNumber2(true)"
                 (ionBlur)="focusNumber2(false)"
-                type="number"
+                type="tel"
               ></ion-input>
             </ion-item>
           </ion-col>
-          <ion-col size="3" [ngClass]="inputFocusNumber3 ? 'focused' : 'unfocused' ">
-            <ion-item lines="none" >
+          <ion-col
+            size="3"
+            [ngClass]="inputFocusNumber3 ? 'focused' : 'unfocused' "
+          >
+            <ion-item lines="none">
               <ion-input
                 class="otp"
                 #n3
@@ -56,12 +70,15 @@
                 (keyup)="next($event,n4)"
                 (ionFocus)="focusNumber3(true)"
                 (ionBlur)="focusNumber3(false)"
-                type="number"
+                type="tel"
               ></ion-input>
             </ion-item>
           </ion-col>
-          <ion-col size="3" [ngClass]="inputFocusNumber4 ? 'focused' : 'unfocused' ">
-            <ion-item lines="none" >
+          <ion-col
+            size="3"
+            [ngClass]="inputFocusNumber4 ? 'focused' : 'unfocused' "
+          >
+            <ion-item lines="none">
               <ion-input
                 class="otp"
                 #n4
@@ -71,7 +88,7 @@
                 (keyup)="next($event,'')"
                 (ionFocus)="focusNumber4(true)"
                 (ionBlur)="focusNumber4(false)"
-                type="number"
+                type="tel"
               ></ion-input>
             </ion-item>
           </ion-col>
