--- a/src/app/modules/profile/profile.page.html
+++ b/src/app/modules/profile/profile.page.html
@@ -9,7 +9,8 @@
     <ion-card class="ion-no-margin ion-padding">
 
       <div class="img-wrapper">
-        <img src="./../../../assets/icon/person-inactive.svg" />
+        <!-- <img src="./../../../assets/icon/person-inactive.svg" /> -->
+        <img src="./../../../assets/icon/profile.png" />
       </div>
       <div class="ion-text-center">
         <h4 class="dark-black-color fn-16 dalel-Bold name">{{userResponse.data.first_name}}</h4>
