--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -6,7 +6,7 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding"  >
+<ion-content class="ion-padding">
   <div class="item-image">
     <img src="./../../../assets/images/1024-500.png" />
     <ion-icon
@@ -34,11 +34,15 @@
     </div>
     <div>
       <ion-icon src="./../../../assets/icon/bed.svg"></ion-icon>
-      <p class="fn-14 dalel-Regular secondary-color">{{itemDetails.roomsNumber}} غرف</p>
+      <p class="fn-14 dalel-Regular secondary-color">
+        {{itemDetails.roomsNumber}} غرف
+      </p>
     </div>
     <div>
       <ion-icon src="./../../../assets/icon/icon4.svg"></ion-icon>
-      <p class="fn-14 dalel-Regular secondary-color">{{itemDetails.bathRoomsNUmber}} حمام</p>
+      <p class="fn-14 dalel-Regular secondary-color">
+        {{itemDetails.bathRoomsNUmber}} حمام
+      </p>
     </div>
   </div>
 
@@ -63,10 +67,7 @@
       class="custom-swiper"
       [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     >
-      <ng-template
-        swiperSlide
-        *ngFor="let cat of [{},{},{},{},{},{},{},{}]"
-      >
+      <ng-template swiperSlide *ngFor="let cat of [{},{},{},{},{},{},{},{}]">
         <img src="./../../../assets/images/512.png" />
       </ng-template>
     </swiper>
