--- a/src/app/modules/my-reservations-details/my-reservations-details.page.scss
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.scss
@@ -18,12 +18,13 @@ ion-button {
   ion-icon {
     font-size: 16px;
   }
+  &::part(native) {
+    padding-inline-start: 10px !important;
+    padding-inline-end: 10px !important;
+  }
 }
 
-ion-button::part(native) {
-  padding-inline-start: 10px !important;
-  padding-inline-end: 10px !important;
-}
+
 
 .name-rating-container{
   display: flex;
