--- a/src/global.scss
+++ b/src/global.scss
@@ -58,10 +58,25 @@
     border-radius: 0px 80px 0px 0px;
   }
 }
-.focused {
-  --border-color: var(--ion-color-primary) !important;
+.my-custom-class{
+  div#alert-1-msg{
+    margin-top: 13px !important;
+    color: var(--ion-color-dark-black) !important;
+  }
+  .alert-button-group.sc-ion-alert-md{
+    display: flex !important;
+    justify-content: space-around !important;
+    button.alert-button.ion-focusable.ion-activatable.sc-ion-alert-md{
+      font-size: 18px !important;
+    }
+  }
 }
-
+.ng-otp-input-wrapper[_ngcontent-vvk-c142] .otp-input[_ngcontent-vvk-c142]{
+  margin-right: 8px !important;
+}
+// .focused {
+//   background-color: var(--ion-color-primary) !important;
+// }
 .unfocused {
   --border-color: var(--ion-color-secondary) !important;
 }
