--- a/src/app/modules/auth/password/password.page.html
+++ b/src/app/modules/auth/password/password.page.html
@@ -5,43 +5,51 @@
     </div>
 
     <ion-card class="auth-container">
-   
       <div class="auth-container-title">
-        <h5> {{ "password-change"|translate}}  </h5>
+        <h5>{{ "password-change"|translate}}</h5>
       </div>
-      
 
-      <form class="auth-form" (ngSubmit)="passwordChange()">
-       
-        <ion-item lines="none" [ngClass]="inputFocusPassword ? 'focused' : 'unfocused' ">
+      <form
+        class="auth-form"
+        (ngSubmit)="forgetPassword()"
+        [formGroup]="forgetPasswordForm"
+      >
+        <ion-item
+          lines="none"
+          [ngClass]="inputFocusPhone ? 'focused' : 'unfocused' "
+        >
           <ion-icon
             item-start
             color="primary"
-            src="{{inputFocusPassword?inputFocusPasswordIcon:inputInFocusPasswordIcon}}"
+            src="{{inputFocusPhone?inputFocusPhoneIcon:inputInFocusPhoneIcon}}"
           ></ion-icon>
-          <ion-input (ionFocus)="focusPassword(true)" (ionBlur)="focusPassword(false)"
-            placeholder="{{'password'|translate}}"
-            type="password"
+          <ion-input
+            (ionFocus)="focusPhone(true)"
+            (ionBlur)="focusPhone(false)"
+            placeholder="{{'phone-number'|translate}}"
+            type="tel"
+            formControlName="phoneNumber"
           ></ion-input>
         </ion-item>
 
-        <ion-item lines="none" [ngClass]="inputFocusConfirmPassword ? 'focused' : 'unfocused' ">
-          <ion-icon
-            item-start
-            color="primary"
-            src="{{inputFocusConfirmPassword?inputFocusConfirmPasswordIcon:inputInFocusConfirmPasswordIcon}}"
-          ></ion-icon>
-          <ion-input (ionFocus)="focusConfirmPassword(true)" (ionBlur)="focusConfirmPassword(false)"
-            placeholder="{{'confirm-password'|translate}}"
-            type="password"
-          ></ion-input>
-        </ion-item>
+        <div
+          class="error-box"
+          *ngIf="isForgetPasswordSubmitted && forgetPasswordErrorControl.phoneNumber.errors?.required"
+        >
+          {{'please enter phone number' | translate}}
+        </div>
+
+        <div
+          class="error-box"
+          *ngIf="isForgetPasswordSubmitted && forgetPasswordErrorControl.phoneNumber.errors?.minlength"
+        >
+          {{'phone number should be 10 numbers' | translate}}
+        </div>
 
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{"confirm"|translate}} </span>
+          <span class="auth-btn"> {{"change password"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
-   
   </div>
 </ion-content>
