--- a/src/app/modules/auth/password/password.page.scss
+++ b/src/app/modules/auth/password/password.page.scss
@@ -4,3 +4,8 @@ ion-content.background {
   }
 
   
+ion-item{
+  --highlight-color-focused:var(--ion-color-primary);
+  --highlight-color-valid:var(--ion-color-primary);
+  --highlight-color-invalid:var(--ion-color-primary);
+}
