--- a/src/app/modules/auth/chnage-password/chnage-password.page.html
+++ b/src/app/modules/auth/chnage-password/chnage-password.page.html
@@ -18,13 +18,10 @@
           lines="none"
           [ngClass]="inputFocusPassword ? 'focused' : 'unfocused' "
         >
-<!--         
           <ion-icon
-            item-start
-            color="primary"
-            src="{{inputFocusCodeVerification?inputFocusCodeVerificationIcon:inputInFocusCodeVerificationIcon}}"
-          ></ion-icon> -->
-          <ion-icon [color]="inputFocusCodeVerification ?'primary':'secondary'"  name="checkmark-outline"></ion-icon>
+            [color]="inputFocusCodeVerification ?'primary':'secondary'"
+            name="checkmark-outline"
+          ></ion-icon>
           <ion-input
             (ionFocus)="focusCodeVerification(true)"
             (ionBlur)="focusCodeVerification(false)"
