--- a/src/app/components/custom-details/custom-details.component.html
+++ b/src/app/components/custom-details/custom-details.component.html
@@ -31,8 +31,8 @@
         class="fn-10 dalel-Bold primary-color"
         [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
       >
-         {{ ItemDetails.price }} {{ ItemDetails.perUnit |translate }}/{{
-          ItemDetails.unit|translate
+         {{ ItemDetails.price }} {{ ItemDetails.unit |translate }}/{{
+          ItemDetails.perUnit|translate
         }}
       </p>
     </div>
