--- a/src/app/modules/search-filter/search-filter.page.scss
+++ b/src/app/modules/search-filter/search-filter.page.scss
@@ -1,3 +1,8 @@
+
+.alert-button-group.sc-ion-alert-md {
+  display: flex !important;
+  justify-content: space-around !important;
+}
 h5 {
   margin-bottom: 24px;
 }
