--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -38,7 +38,7 @@
 
 
         <div class="price">
-          <p class="fn-15 dalel-SemiBold secondary-color">{{item.price}}   {{item.perUnit|translate}}/ {{item.unit|translate}}</p>
+          <p class="fn-15 dalel-SemiBold secondary-color">{{item.price}}   {{item.unit|translate}}/ {{item.perUnit|translate}}</p>
         </div>
 
         <div class="title"  [ngStyle]="currentlangauge=='ar'?{'right': '13px'} : {'left': '13px'}">
@@ -74,7 +74,7 @@
         <img src="./../../../assets/images/1024-500.png" />
 
         <div class="price">
-          <p class="fn-15 dalel-SemiBold secondary-color">{{item.price}}   {{item.perUnit|translate}}/ {{item.unit|translate}}</p>
+          <p class="fn-15 dalel-SemiBold secondary-color">{{item.price}}   {{item.unit|translate}}/ {{item.perUnit|translate}}</p>
         </div>
 
         <div class="title"  [ngStyle]="currentlangauge=='ar'?{'right': '13px'} : {'left': '13px'}">
